--- a/submit.html
+++ b/submit.html
@@ -1,1 +1,29 @@
-<h1>Thank you!</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Browser Technologies 2023</title>
+</head>
+<body>
+    <main>
+        <section class="submitpage">
+                 
+            <h1>Bedankt voor het invullen van de enquête</h1>
+        
+            <a href="index.html">
+                <button>Terug</button>
+            </a>
+        </section>
+    </main>
+
+    <noscript>
+        <style type="text/css">
+            button {display: none;}
+        </style>
+    </noscript>
+    <script src="script.js"></script>
+</body>
+</html>
