email input fix

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         </label>
 
                         <label for="email">Email*
-                            <input type="text" id="email" placeholder="Email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" required>  
+                            <input type="email" id="email" placeholder="Email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" required>  
                         </label>
                         
                 </fieldset>
